@@ -1,5 +1,17 @@
 2007-07-10  Bastien Nocera  <hadess@hadess.net>
 
+	* libgsm/phonemgr-utils.c: (phonemgr_utils_connect),
+	(phonemgr_utils_connection_is_supported):
+	* libgsm/phonemgr-utils.h:
+	Add a function to check for protocol availability (ie.
+	gnokii built without Bluetooth support)
+
+	* src/ui.c: (set_dependent_widget), (populate_prefs):
+	* ui/phonemgr.glade: Set the Bluetooth chooser as unsensitive
+	if there's no bluetooth support
+
+2007-07-10  Bastien Nocera  <hadess@hadess.net>
+
 	* configure.in: Require the latest gnokii CVS (newer than
 	0.6.17)
 
